//
//  Home.swift
//  DichtDeLicht
//
//  Created by Mariia Turchina on 10/05/2020.
//  Copyright © 2020 Mariia Turchina. All rights reserved.
//

import Foundation

struct Home : Hashable {
    var doc_id : String
    var name: String
}
