//
//  Room.swift
//  DichtDeLicht
//
//  Created by Mariia Turchina on 09/05/2020.
//  Copyright © 2020 Mariia Turchina. All rights reserved.
//

import Foundation

struct Room {
    var name: String
    var LEDs: [LED]
}
